add a meaningfull massege

--- a/index.html
+++ b/index.html
@@ -27,5 +27,13 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima, numquam consequuntur consequatur quaerat minus rerum voluptatibus eum. Numquam repellendus id dicta optio sunt voluptate, alias ullam sed molestias. Nam, eos.</p>
 
     </div>
+    <div>
+        <h1>i push to incremnetal</h1>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningfull massege</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
