--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h1>Bts is lgbtq singer team</h1>
+        <img src="image/bts.jpg" alt="">
+    </div>
 </body>
 </html>
